--- a/db-course/testing.ipynb
+++ b/db-course/testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,15 +15,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2023-11-29 14:56:47,735][INFO]: Connecting root@fakeservices.datajoint.io:3306\n",
-      "[2023-11-29 14:56:47,762][INFO]: Connected root@fakeservices.datajoint.io:3306\n"
+      "[2023-11-29 15:56:22,287][INFO]: Connecting root@fakeservices.datajoint.io:3306\n",
+      "[2023-11-29 15:56:22,295][INFO]: Connected root@fakeservices.datajoint.io:3306\n"
      ]
     },
     {
@@ -185,10 +185,10 @@
        "</svg>"
       ],
       "text/plain": [
-       "<datajoint.diagram.Diagram at 0x7f830afc30a0>"
+       "<datajoint.diagram.Diagram at 0x7fddcc08b4f0>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,81 +204,376 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql://root:***@127.0.0.1\n",
+      "0 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import pymysql"
+    "%%sql\n",
+    "use classicsales"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql://root:***@127.0.0.1\n",
+      "9 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>Tables_in_classicsales</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>customer</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>employee</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>office</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>order</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>order__item</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>payment</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>product</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>product_line</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>report</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('customer',),\n",
+       " ('employee',),\n",
+       " ('office',),\n",
+       " ('order',),\n",
+       " ('order__item',),\n",
+       " ('payment',),\n",
+       " ('product',),\n",
+       " ('product_line',),\n",
+       " ('report',)]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import pymysql\n",
-    "from pymysql import Error\n",
-    "\n",
-    "def place_order(product, quantity, customer_number, sales_rep,amount):\n",
-    "    # Connection parameters, replace with your own\n",
-    "    db_config = {\n",
-    "        'host': '127.0.0.1',\n",
-    "        'user': 'root',\n",
-    "        'password': 'simple',\n",
-    "        'database': 'classicsales',\n",
-    "        'autocommit': False  \n",
-    "    }\n",
-    "\n",
-    "    try:\n",
-    "    \n",
-    "        connection = pymysql.connect(**db_config)\n",
-    "\n",
-    "        # Create a cursor object\n",
-    "        cursor = connection.cursor()\n",
-    "\n",
-    "        try:\n",
-    "            # Start the transaction\n",
-    "            connection.begin()\n",
-    "\n",
-    "            # Insert order details into Order table\n",
-    "            order_query = \"INSERT INTO `order` (customer_number,sales_rep) VALUES (%s,%s)\"\n",
-    "            cursor.execute(order_query, (customer_number, sales_rep))\n",
-    "\n",
-    "            # Get the order_id of the newly inserted order\n",
-    "            order_number = cursor.lastrowid\n",
-    "\n",
-    "            # Insert order items into Order.Item table\n",
-    "            for product, quantity,price in zip(product, quantity,price):\n",
-    "                item_query = \"INSERT INTO order__item (order_number, product, quantity,price) VALUES (%s, %s, %s,%s)\"\n",
-    "                cursor.execute(item_query, (order_number, product, quantity))\n",
-    "\n",
-    "            price = cursor.fetchone()\n",
-    "\n",
-    "            # Insert payment details into Payment table\n",
-    "            payment_query = \"INSERT INTO payment (order_number, amount) VALUES (%s, %s)\"\n",
-    "            cursor.execute(payment_query, (order_number, amount))\n",
-    "\n",
-    "            if price != amount:\n",
-    "                raise RuntimeError('Incorrect amount')\n",
-    "\n",
-    "            # Commit the transaction\n",
-    "            connection.commit()\n",
-    "\n",
-    "        except Error as e:\n",
-    "            # Rollback the transaction in case of an error\n",
-    "            connection.rollback()\n",
-    "            raise e\n",
-    "\n",
-    "    except Error as e:\n",
-    "        print(f\"Error: {e}\")\n",
-    "\n",
-    "    finally:\n",
-    "        # Close the cursor and connection\n",
-    "        cursor.close()\n",
-    "        connection.close()\n",
-    "    \n",
-    "\n"
+    "%%sql\n",
+    "show tables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql://root:***@127.0.0.1\n",
+      "5 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>customer_number</th>\n",
+       "            <th>check_number</th>\n",
+       "            <th>payment_date</th>\n",
+       "            <th>amount</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>103</td>\n",
+       "            <td>HQ336336</td>\n",
+       "            <td>2004-10-19</td>\n",
+       "            <td>6066.78</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>103</td>\n",
+       "            <td>JM555205</td>\n",
+       "            <td>2003-06-05</td>\n",
+       "            <td>14571.44</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>103</td>\n",
+       "            <td>OM314933</td>\n",
+       "            <td>2004-12-18</td>\n",
+       "            <td>1676.14</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>112</td>\n",
+       "            <td>BO864823</td>\n",
+       "            <td>2004-12-17</td>\n",
+       "            <td>14191.12</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>112</td>\n",
+       "            <td>HQ55022</td>\n",
+       "            <td>2003-06-06</td>\n",
+       "            <td>32641.98</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(103, 'HQ336336', datetime.date(2004, 10, 19), Decimal('6066.78')),\n",
+       " (103, 'JM555205', datetime.date(2003, 6, 5), Decimal('14571.44')),\n",
+       " (103, 'OM314933', datetime.date(2004, 12, 18), Decimal('1676.14')),\n",
+       " (112, 'BO864823', datetime.date(2004, 12, 17), Decimal('14191.12')),\n",
+       " (112, 'HQ55022', datetime.date(2003, 6, 6), Decimal('32641.98'))]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "SELECT * FROM payment\n",
+    "limit 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql://root:***@127.0.0.1\n",
+      "5 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>order_number</th>\n",
+       "            <th>order_date</th>\n",
+       "            <th>required_date</th>\n",
+       "            <th>shipped_date</th>\n",
+       "            <th>status</th>\n",
+       "            <th>comments</th>\n",
+       "            <th>customer_number</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>10100</td>\n",
+       "            <td>2003-01-06</td>\n",
+       "            <td>2003-01-13</td>\n",
+       "            <td>2003-01-10</td>\n",
+       "            <td>Shipped</td>\n",
+       "            <td>None</td>\n",
+       "            <td>363</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>10101</td>\n",
+       "            <td>2003-01-09</td>\n",
+       "            <td>2003-01-18</td>\n",
+       "            <td>2003-01-11</td>\n",
+       "            <td>Shipped</td>\n",
+       "            <td>Check on availability.</td>\n",
+       "            <td>128</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>10102</td>\n",
+       "            <td>2003-01-10</td>\n",
+       "            <td>2003-01-18</td>\n",
+       "            <td>2003-01-14</td>\n",
+       "            <td>Shipped</td>\n",
+       "            <td>None</td>\n",
+       "            <td>181</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>10103</td>\n",
+       "            <td>2003-01-29</td>\n",
+       "            <td>2003-02-07</td>\n",
+       "            <td>2003-02-02</td>\n",
+       "            <td>Shipped</td>\n",
+       "            <td>None</td>\n",
+       "            <td>121</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>10104</td>\n",
+       "            <td>2003-01-31</td>\n",
+       "            <td>2003-02-09</td>\n",
+       "            <td>2003-02-01</td>\n",
+       "            <td>Shipped</td>\n",
+       "            <td>None</td>\n",
+       "            <td>141</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(10100, datetime.date(2003, 1, 6), datetime.date(2003, 1, 13), datetime.date(2003, 1, 10), 'Shipped', None, 363),\n",
+       " (10101, datetime.date(2003, 1, 9), datetime.date(2003, 1, 18), datetime.date(2003, 1, 11), 'Shipped', 'Check on availability.', 128),\n",
+       " (10102, datetime.date(2003, 1, 10), datetime.date(2003, 1, 18), datetime.date(2003, 1, 14), 'Shipped', None, 181),\n",
+       " (10103, datetime.date(2003, 1, 29), datetime.date(2003, 2, 7), datetime.date(2003, 2, 2), 'Shipped', None, 121),\n",
+       " (10104, datetime.date(2003, 1, 31), datetime.date(2003, 2, 9), datetime.date(2003, 2, 1), 'Shipped', None, 141)]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "SELECT * FROM `order`\n",
+    "limit 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql://root:***@127.0.0.1\n",
+      "5 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>order_number</th>\n",
+       "            <th>product_code</th>\n",
+       "            <th>quantity</th>\n",
+       "            <th>price</th>\n",
+       "            <th>order_line_number</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>10100</td>\n",
+       "            <td>S18_1749</td>\n",
+       "            <td>30</td>\n",
+       "            <td>136.00</td>\n",
+       "            <td>3</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>10100</td>\n",
+       "            <td>S18_2248</td>\n",
+       "            <td>50</td>\n",
+       "            <td>55.09</td>\n",
+       "            <td>2</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>10100</td>\n",
+       "            <td>S18_4409</td>\n",
+       "            <td>22</td>\n",
+       "            <td>75.46</td>\n",
+       "            <td>4</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>10100</td>\n",
+       "            <td>S24_3969</td>\n",
+       "            <td>49</td>\n",
+       "            <td>35.29</td>\n",
+       "            <td>1</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>10101</td>\n",
+       "            <td>S18_2325</td>\n",
+       "            <td>25</td>\n",
+       "            <td>108.06</td>\n",
+       "            <td>4</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(10100, 'S18_1749', 30, Decimal('136.00'), 3),\n",
+       " (10100, 'S18_2248', 50, Decimal('55.09'), 2),\n",
+       " (10100, 'S18_4409', 22, Decimal('75.46'), 4),\n",
+       " (10100, 'S24_3969', 49, Decimal('35.29'), 1),\n",
+       " (10101, 'S18_2325', 25, Decimal('108.06'), 4)]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "SELECT * FROM order__item\n",
+    "limit 5"
    ]
   }
  ],
