--- a/db-course/008-Transactions.ipynb
+++ b/db-course/008-Transactions.ipynb
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,9 +505,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql://root:***@127.0.0.1\n",
+      "(pymysql.err.OperationalError) (1049, \"Unknown database 'bank'\")\n",
+      "[SQL: use bank;]\n",
+      "(Background on this error at: https://sqlalche.me/e/20/e3q8)\n"
+     ]
+    }
+   ],
    "source": [
     "%%sql\n",
     "\n",
@@ -518,11 +529,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql://root:***@127.0.0.1\n",
+      "(pymysql.err.OperationalError) (1046, 'No database selected')\n",
+      "[SQL: SELECT * FROM account;]\n",
+      "(Background on this error at: https://sqlalche.me/e/20/e3q8)\n"
+     ]
+    }
+   ],
    "source": [
     "%%sql\n",
     "\n",
@@ -531,9 +553,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql://root:***@127.0.0.1\n"
+     ]
+    },
+    {
+     "ename": "Exception",
+     "evalue": "ipython_sql does not support transactions",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m get_ipython()\u001b[39m.\u001b[39;49mrun_cell_magic(\u001b[39m'\u001b[39;49m\u001b[39msql\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39m\\n\u001b[39;49;00m\u001b[39mBEGIN TRANSACTION;\u001b[39;49m\u001b[39m\\n\u001b[39;49;00m\u001b[39m  \u001b[39;49m\u001b[39m\\n\u001b[39;49;00m\u001b[39m    UPDATE account SET balance = balance + 100\u001b[39;49m\u001b[39m\\n\u001b[39;49;00m\u001b[39m    WHERE account = 98230343;\u001b[39;49m\u001b[39m\\n\u001b[39;49;00m\u001b[39m    \u001b[39;49m\u001b[39m\\n\u001b[39;49;00m\u001b[39m    \u001b[39;49m\u001b[39m\\n\u001b[39;49;00m\u001b[39m    UPDATE account SET balance = balance - 100\u001b[39;49m\u001b[39m\\n\u001b[39;49;00m\u001b[39m    WHERE account 95440048;\u001b[39;49m\u001b[39m\\n\u001b[39;49;00m\u001b[39m\\n\u001b[39;49;00m\u001b[39mCOMMIT\u001b[39;49m\u001b[39m\\n\u001b[39;49;00m\u001b[39m'\u001b[39;49m)\n",
+      "File \u001b[0;32m/usr/local/lib/python3.9/site-packages/IPython/core/interactiveshell.py:2493\u001b[0m, in \u001b[0;36mInteractiveShell.run_cell_magic\u001b[0;34m(self, magic_name, line, cell)\u001b[0m\n\u001b[1;32m   2491\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbuiltin_trap:\n\u001b[1;32m   2492\u001b[0m     args \u001b[39m=\u001b[39m (magic_arg_s, cell)\n\u001b[0;32m-> 2493\u001b[0m     result \u001b[39m=\u001b[39m fn(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m   2495\u001b[0m \u001b[39m# The code below prevents the output from being displayed\u001b[39;00m\n\u001b[1;32m   2496\u001b[0m \u001b[39m# when using magics with decorator @output_can_be_silenced\u001b[39;00m\n\u001b[1;32m   2497\u001b[0m \u001b[39m# when the last Python token in the expression is a ';'.\u001b[39;00m\n\u001b[1;32m   2498\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mgetattr\u001b[39m(fn, magic\u001b[39m.\u001b[39mMAGIC_OUTPUT_CAN_BE_SILENCED, \u001b[39mFalse\u001b[39;00m):\n",
+      "File \u001b[0;32m~/.local/lib/python3.9/site-packages/sql/magic.py:219\u001b[0m, in \u001b[0;36mSqlMagic.execute\u001b[0;34m(self, line, cell, local_ns)\u001b[0m\n\u001b[1;32m    216\u001b[0m     \u001b[39mreturn\u001b[39;00m\n\u001b[1;32m    218\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m--> 219\u001b[0m     result \u001b[39m=\u001b[39m sql\u001b[39m.\u001b[39;49mrun\u001b[39m.\u001b[39;49mrun(conn, parsed[\u001b[39m\"\u001b[39;49m\u001b[39msql\u001b[39;49m\u001b[39m\"\u001b[39;49m], \u001b[39mself\u001b[39;49m, user_ns)\n\u001b[1;32m    221\u001b[0m     \u001b[39mif\u001b[39;00m (\n\u001b[1;32m    222\u001b[0m         result \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m    223\u001b[0m         \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39misinstance\u001b[39m(result, \u001b[39mstr\u001b[39m)\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    226\u001b[0m         \u001b[39m# Instead of returning values, set variables directly in the\u001b[39;00m\n\u001b[1;32m    227\u001b[0m         \u001b[39m# user's namespace. Variable names given by column names\u001b[39;00m\n\u001b[1;32m    229\u001b[0m         \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mautopandas:\n",
+      "File \u001b[0;32m~/.local/lib/python3.9/site-packages/sql/run.py:357\u001b[0m, in \u001b[0;36mrun\u001b[0;34m(conn, sql, config, user_namespace)\u001b[0m\n\u001b[1;32m    355\u001b[0m first_word \u001b[39m=\u001b[39m sql\u001b[39m.\u001b[39mstrip()\u001b[39m.\u001b[39msplit()[\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39mlower()\n\u001b[1;32m    356\u001b[0m \u001b[39mif\u001b[39;00m first_word \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mbegin\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[0;32m--> 357\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mException\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mipython_sql does not support transactions\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m    358\u001b[0m \u001b[39mif\u001b[39;00m first_word\u001b[39m.\u001b[39mstartswith(\u001b[39m\"\u001b[39m\u001b[39m\\\\\u001b[39;00m\u001b[39m\"\u001b[39m) \u001b[39mand\u001b[39;00m \\\n\u001b[1;32m    359\u001b[0m     (\u001b[39m\"\u001b[39m\u001b[39mpostgres\u001b[39m\u001b[39m\"\u001b[39m \u001b[39min\u001b[39;00m \u001b[39mstr\u001b[39m(conn\u001b[39m.\u001b[39mdialect) \u001b[39mor\u001b[39;00m\n\u001b[1;32m    360\u001b[0m      \u001b[39m\"\u001b[39m\u001b[39mredshift\u001b[39m\u001b[39m\"\u001b[39m \u001b[39min\u001b[39;00m \u001b[39mstr\u001b[39m(conn\u001b[39m.\u001b[39mdialect)):\n\u001b[1;32m    361\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m PGSpecial:\n",
+      "\u001b[0;31mException\u001b[0m: ipython_sql does not support transactions"
+     ]
+    }
+   ],
    "source": [
     "%%sql\n",
     "\n",
@@ -551,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,18 +613,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'account1' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 5\u001b[0m\n\u001b[1;32m      1\u001b[0m cursor \u001b[39m=\u001b[39m conn\u001b[39m.\u001b[39mcursor()\n\u001b[1;32m      2\u001b[0m cursor\u001b[39m.\u001b[39mexecute(\u001b[39m\"\"\"\u001b[39m\n\u001b[1;32m      3\u001b[0m \u001b[39m    SELECT balance FROM bank.account \u001b[39m\n\u001b[1;32m      4\u001b[0m \u001b[39m    WHERE account_number = \u001b[39m\u001b[39m%s\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"\u001b[39m, (account1[\u001b[39m\"\u001b[39m\u001b[39maccount_number\u001b[39m\u001b[39m\"\u001b[39m],))\n\u001b[1;32m      7\u001b[0m amount \u001b[39m=\u001b[39m \u001b[39m100\u001b[39m\n\u001b[1;32m      9\u001b[0m current_balance \u001b[39m=\u001b[39m cursor\u001b[39m.\u001b[39mfetchone()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'account1' is not defined"
+     ]
     }
    ],
    "source": [
@@ -610,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
