--- a/db-course/Project.ipynb
+++ b/db-course/Project.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sql extension is already loaded. To reload it, use:\n",
+      "  %reload_ext sql\n"
+     ]
+    }
+   ],
    "source": [
     "import pymysql \n",
     "pymysql.install_as_MySQLdb()\n",
@@ -14,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -53,7 +62,7 @@
        "[]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -86,7 +95,7 @@
        "[]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,22 +107,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "vscode": {
      "languageId": "sql"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql://root:***@127.0.0.1\n",
+      "0 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
     "\n",
     "CREATE TABLE Manager (\n",
-    "Manager_ID Varchar(30) NOT NULL\n",
-    "First_name Varchar(30) NOT NULL\n",
-    "Last_name Varchar(30) NOT NULL\n",
-    "Phone bigint NOT NULL\n",
-    "Email Varchar(30) NOT NULL\n",
+    "Manager_ID bigint NOT NULL,\n",
+    "First_name Varchar(30) NOT NULL,\n",
+    "Last_name Varchar(30) NOT NULL,\n",
+    "Phone bigint NOT NULL,\n",
+    "Email Varchar(30) NOT NULL,\n",
     "\n",
     "PRIMARY KEY(Manager_ID)\n",
     ")"
@@ -121,27 +149,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "vscode": {
      "languageId": "sql"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql://root:***@127.0.0.1\n",
+      "0 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
     "\n",
     "CREATE TABLE Job_Posting (\n",
-    "Job_ID Varchar(30) NOT NULL\n",
-    "Manager_ID Varchar(30) NOT NULL\n",
-    "Job_title Varchar(30) NOT NULL\n",
-    "Open_date date NOT NULL\n",
-    "End_date date NOT NULL\n",
-    "Description Varchar(200) NOT NULL\n",
-    "Minimum_annual_salary bigint NOT NULL\n",
-    "Maximum_annual_salary bigint NOT NULL\n",
+    "Job_ID bigint NOT NULL,\n",
+    "Manager_ID bigint NOT NULL,\n",
+    "Job_title Varchar(30) NOT NULL,\n",
+    "Open_date date NOT NULL,\n",
+    "End_date date NOT NULL,\n",
+    "Description Varchar(200) NOT NULL,\n",
+    "Minimum_annual_salary bigint NOT NULL,\n",
+    "Maximum_annual_salary bigint NOT NULL,\n",
     "\n",
-    "PRIMARY KEY(Job_ID)\n",
+    "PRIMARY KEY(Job_ID,Manager_ID),\n",
     "FOREIGN KEY (Manager_ID) REFERENCES Manager(Manager_ID)\n",
     ")"
    ]
@@ -159,12 +206,14 @@
     "%%sql\n",
     "\n",
     "CREATE TABLE Skill (\n",
-    "Job_ID Varchar(30) NOT NULL\n",
-    "Applicant_ID Varchar(30) NOT NULL\n",
-    "Skill_name Varchar(30) NOT NULL\n",
-    "Skill_description Varchar(200) NOT NULL\n",
+    "Job_ID Varchar(30) NOT NULL,\n",
+    "Applicant_ID Varchar(30) NOT NULL,\n",
+    "Skill_name enum(\"SQL\", \"Java\", \"Python\", \"C++\", \"JavaScript\", \"R\", \"Rust\") NOT NULL,\n",
+    "Skill_description Varchar(200) NOT NULL,\n",
     "\n",
-    "PRIMARY KEY(Manager_ID)\n",
+    "PRIMARY KEY(Skill_name,Job_ID),\n",
+    "FOREIGN KEY (Job_ID) REFERENCES Job_Posting(Job_ID)\n",
+    "\n",
     ")"
    ]
   },
@@ -297,6 +346,63 @@
     "PRIMARY KEY(Offer_ID)\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql://root:***@127.0.0.1\n",
+      "2 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "drop schema Hiring"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# prepare datajoint\n",
+    "import datajoint as dj\n",
+    "from faker import Faker\n",
+    "fake = Faker()\n",
+    "schema = dj.Schema('Hiring')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
