--- a/db-course/PythonFinalPro.ipynb
+++ b/db-course/PythonFinalPro.ipynb
@@ -532,39 +532,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "text() takes from 1 to 3 positional arguments but 6 were given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[40], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m Job\u001b[39m.\u001b[39;49minsert(\n\u001b[1;32m      2\u001b[0m     \u001b[39mdict\u001b[39;49m(\n\u001b[1;32m      3\u001b[0m     random\u001b[39m.\u001b[39;49mchoice(keys),\n\u001b[1;32m      4\u001b[0m     job_id\u001b[39m=\u001b[39;49mfake\u001b[39m.\u001b[39;49mpystr_format(),\n\u001b[1;32m      5\u001b[0m     job_title\u001b[39m=\u001b[39;49mfake\u001b[39m.\u001b[39;49mtext(\u001b[39m\"\u001b[39;49m\u001b[39mprogrammer\u001b[39;49m\u001b[39m\"\u001b[39;49m,\u001b[39m\"\u001b[39;49m\u001b[39manalyst\u001b[39;49m\u001b[39m\"\u001b[39;49m,\u001b[39m\"\u001b[39;49m\u001b[39mdata scientist\u001b[39;49m\u001b[39m\"\u001b[39;49m,\u001b[39m\"\u001b[39;49m\u001b[39mengineer\u001b[39;49m\u001b[39m\"\u001b[39;49m,\u001b[39m\"\u001b[39;49m\u001b[39mAdmin\u001b[39;49m\u001b[39m\"\u001b[39;49m),\n\u001b[1;32m      6\u001b[0m     open_date\u001b[39m=\u001b[39;49mfake\u001b[39m.\u001b[39;49mdate(),\n\u001b[1;32m      7\u001b[0m     end_date\u001b[39m=\u001b[39;49mfake\u001b[39m.\u001b[39;49mdate(),\n\u001b[1;32m      8\u001b[0m     description\u001b[39m=\u001b[39;49mfake\u001b[39m.\u001b[39;49mtext(),\n\u001b[1;32m      9\u001b[0m     minimum_annual_salary\u001b[39m=\u001b[39;49mfake\u001b[39m.\u001b[39;49mrandom_int(\u001b[39m400000\u001b[39;49m,\u001b[39m800000\u001b[39;49m),\n\u001b[1;32m     10\u001b[0m     maximum_annual_salary\u001b[39m=\u001b[39;49mfake\u001b[39m.\u001b[39;49mrandom_int(\u001b[39m1000000\u001b[39;49m,\u001b[39m6000000\u001b[39;49m)) \u001b[39mfor\u001b[39;49;00m _ \u001b[39min\u001b[39;49;00m \u001b[39mrange\u001b[39;49m(\u001b[39m30\u001b[39;49m))\n",
-      "File \u001b[0;32m/usr/local/lib/python3.9/site-packages/datajoint/table.py:419\u001b[0m, in \u001b[0;36mTable.insert\u001b[0;34m(self, rows, replace, skip_duplicates, ignore_extra_fields, allow_direct_insert)\u001b[0m\n\u001b[1;32m    416\u001b[0m     \u001b[39mreturn\u001b[39;00m\n\u001b[1;32m    418\u001b[0m field_list \u001b[39m=\u001b[39m []  \u001b[39m# collects the field list from first row (passed by reference)\u001b[39;00m\n\u001b[0;32m--> 419\u001b[0m rows \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39;49m(\n\u001b[1;32m    420\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m__make_row_to_insert(row, field_list, ignore_extra_fields)\n\u001b[1;32m    421\u001b[0m     \u001b[39mfor\u001b[39;49;00m row \u001b[39min\u001b[39;49;00m rows\n\u001b[1;32m    422\u001b[0m )\n\u001b[1;32m    423\u001b[0m \u001b[39mif\u001b[39;00m rows:\n\u001b[1;32m    424\u001b[0m     \u001b[39mtry\u001b[39;00m:\n",
-      "File \u001b[0;32m/usr/local/lib/python3.9/site-packages/datajoint/table.py:419\u001b[0m, in \u001b[0;36m<genexpr>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m    416\u001b[0m     \u001b[39mreturn\u001b[39;00m\n\u001b[1;32m    418\u001b[0m field_list \u001b[39m=\u001b[39m []  \u001b[39m# collects the field list from first row (passed by reference)\u001b[39;00m\n\u001b[0;32m--> 419\u001b[0m rows \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(\n\u001b[1;32m    420\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m__make_row_to_insert(row, field_list, ignore_extra_fields)\n\u001b[1;32m    421\u001b[0m     \u001b[39mfor\u001b[39;00m row \u001b[39min\u001b[39;00m rows\n\u001b[1;32m    422\u001b[0m )\n\u001b[1;32m    423\u001b[0m \u001b[39mif\u001b[39;00m rows:\n\u001b[1;32m    424\u001b[0m     \u001b[39mtry\u001b[39;00m:\n",
-      "Cell \u001b[0;32mIn[40], line 5\u001b[0m, in \u001b[0;36m<genexpr>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m      1\u001b[0m Job\u001b[39m.\u001b[39minsert(\n\u001b[1;32m      2\u001b[0m     \u001b[39mdict\u001b[39m(\n\u001b[1;32m      3\u001b[0m     random\u001b[39m.\u001b[39mchoice(keys),\n\u001b[1;32m      4\u001b[0m     job_id\u001b[39m=\u001b[39mfake\u001b[39m.\u001b[39mpystr_format(),\n\u001b[0;32m----> 5\u001b[0m     job_title\u001b[39m=\u001b[39mfake\u001b[39m.\u001b[39;49mtext(\u001b[39m\"\u001b[39;49m\u001b[39mprogrammer\u001b[39;49m\u001b[39m\"\u001b[39;49m,\u001b[39m\"\u001b[39;49m\u001b[39manalyst\u001b[39;49m\u001b[39m\"\u001b[39;49m,\u001b[39m\"\u001b[39;49m\u001b[39mdata scientist\u001b[39;49m\u001b[39m\"\u001b[39;49m,\u001b[39m\"\u001b[39;49m\u001b[39mengineer\u001b[39;49m\u001b[39m\"\u001b[39;49m,\u001b[39m\"\u001b[39;49m\u001b[39mAdmin\u001b[39;49m\u001b[39m\"\u001b[39;49m),\n\u001b[1;32m      6\u001b[0m     open_date\u001b[39m=\u001b[39mfake\u001b[39m.\u001b[39mdate(),\n\u001b[1;32m      7\u001b[0m     end_date\u001b[39m=\u001b[39mfake\u001b[39m.\u001b[39mdate(),\n\u001b[1;32m      8\u001b[0m     description\u001b[39m=\u001b[39mfake\u001b[39m.\u001b[39mtext(),\n\u001b[1;32m      9\u001b[0m     minimum_annual_salary\u001b[39m=\u001b[39mfake\u001b[39m.\u001b[39mrandom_int(\u001b[39m400000\u001b[39m,\u001b[39m800000\u001b[39m),\n\u001b[1;32m     10\u001b[0m     maximum_annual_salary\u001b[39m=\u001b[39mfake\u001b[39m.\u001b[39mrandom_int(\u001b[39m1000000\u001b[39m,\u001b[39m6000000\u001b[39m)) \u001b[39mfor\u001b[39;00m _ \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m30\u001b[39m))\n",
-      "\u001b[0;31mTypeError\u001b[0m: text() takes from 1 to 3 positional arguments but 6 were given"
-     ]
-    }
-   ],
-   "source": [
-    "Job.insert(\n",
-    "    dict(\n",
-    "    random.choice(keys),\n",
-    "    job_id=fake.pystr_format(),\n",
-    "    job_title=fake.text(\"programmer\",\"analyst\",\"data scientist\",\"engineer\",\"Admin\"),\n",
-    "    open_date=fake.date(),\n",
-    "    end_date=fake.date(),\n",
-    "    description=fake.text(),\n",
-    "    minimum_annual_salary=fake.random_int(400000,800000),\n",
-    "    maximum_annual_salary=fake.random_int(1000000,6000000)) for _ in range(30))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
    "outputs": [
@@ -671,6 +638,39 @@
    ],
    "source": [
     "Job()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Job.insert([\n",
+    "    [\"EZ898980\",\"Analyst\",20-09-2023,22-10-2023,\"gathers, cleans, and studies data sets to help solve problems using different skill and tools.\",10000,40000,409503],\n",
+    "    [\"EG898323\",\"Data Scientist\",01-04-2023,04-05-2023,\"collects large amounts of data using analytical, statistical, and programmable skills.\",70000,90000,892699],\n",
+    "    [\"ES898423\",\"Database Admin\",30-05-2023,22-07-2023,\"ensure that the databases run efficiently and securely.managing access to systems that store company information.\",100000,10500,892699],\n",
+    "    [\"EW898323\",\"Programmer\",13-05-2023,12-07-2023,\"designing and updating software solutions, writing and updating source-code and managing various operating systems.\",60000,80060,409503],\n",
+    "    [\"ES3256423\",\"Web Developer\",23-06-2023,22-08-2023,\"develops World Wide Web applications using a client–server model. The applications typically use HTML, CSS, and JavaScript\",700000,905000,546399],\n",
+    "    [\"ED898453\",\"Software Engineer\",10-05-2023,12-07-2023,\"applies the engineering design process to design, develop, test, maintain, and evaluate computer software.\",5000000,6000000,892699],\n",
+    "    [\"EQ4598423\",\"full-stack developer\",03-10-2023,22-11-2023,\"work progressively on both front-end and back-end systems.\",40000,10500,546399],\n",
+    "    [\"EA498423\",\"Database Admin\",30-05-2023,22-07-2023,\"ensure that the databases run efficiently and securely.managing access to systems that store company information.\",100000,10500,777937],\n",
+    "    [\"ES898423\",\"Database Admin\",30-05-2023,22-07-2023,\"ensure that the databases run efficiently and securely.managing access to systems that store company information.\",100000,10500,469720],\n",
+    "    [\"ES898423\",\"Database Admin\",30-05-2023,22-07-2023,\"ensure that the databases run efficiently and securely.managing access to systems that store company information.\",100000,10500,801062],\n",
+    "    [\"ES898423\",\"Database Admin\",30-05-2023,22-07-2023,\"ensure that the databases run efficiently and securely.managing access to systems that store company information.\",100000,10500,514378],\n",
+    "    [\"ES898423\",\"Database Admin\",30-05-2023,22-07-2023,\"ensure that the databases run efficiently and securely.managing access to systems that store company information.\",100000,10500,546399],\n",
+    "    [\"ES898423\",\"Database Admin\",30-05-2023,22-07-2023,\"ensure that the databases run efficiently and securely.managing access to systems that store company information.\",100000,10500,514378],\n",
+    "    [\"ES898423\",\"Database Admin\",30-05-2023,22-07-2023,\"ensure that the databases run efficiently and securely.managing access to systems that store company information.\",100000,10500,892699],\n",
+    "    [\"ES898423\",\"Database Admin\",30-05-2023,22-07-2023,\"ensure that the databases run efficiently and securely.managing access to systems that store company information.\",100000,10500,469720],\n",
+    "    [\"ES898423\",\"Database Admin\",30-05-2023,22-07-2023,\"ensure that the databases run efficiently and securely.managing access to systems that store company information.\",100000,10500,892699],\n",
+    "    [\"ES898423\",\"Database Admin\",30-05-2023,22-07-2023,\"ensure that the databases run efficiently and securely.managing access to systems that store company information.\",100000,10500,728468],\n",
+    "    [\"ES898423\",\"Database Admin\",30-05-2023,22-07-2023,\"ensure that the databases run efficiently and securely.managing access to systems that store company information.\",100000,10500,892699],\n",
+    "    [\"ES898423\",\"Database Admin\",30-05-2023,22-07-2023,\"ensure that the databases run efficiently and securely.managing access to systems that store company information.\",100000,10500,546399],\n",
+    "    [\"ES898423\",\"Database Admin\",30-05-2023,22-07-2023,\"ensure that the databases run efficiently and securely.managing access to systems that store company information.\",100000,10500,788478],\n",
+    "    [\"ES898423\",\"Database Admin\",30-05-2023,22-07-2023,\"ensure that the databases run efficiently and securely.managing access to systems that store company information.\",100000,10500,728468],\n",
+    "    [\"ES898423\",\"Database Admin\",30-05-2023,22-07-2023,\"ensure that the databases run efficiently and securely.managing access to systems that store company information.\",100000,10500,788478],\n",
+    "    [\"ES898423\",\"Database Admin\",30-05-2023,22-07-2023,\"ensure that the databases run efficiently and securely.managing access to systems that store company information.\",100000,10500,605221],\n",
+    "])"
    ]
   },
   {
@@ -850,10 +850,112 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    \n",
+       "    <style type=\"text/css\">\n",
+       "        .Table{\n",
+       "            border-collapse:collapse;\n",
+       "        }\n",
+       "        .Table th{\n",
+       "            background: #A0A0A0; color: #ffffff; padding:4px; border:#f0e0e0 1px solid;\n",
+       "            font-weight: normal; font-family: monospace; font-size: 100%;\n",
+       "        }\n",
+       "        .Table td{\n",
+       "            padding:4px; border:#f0e0e0 1px solid; font-size:100%;\n",
+       "        }\n",
+       "        .Table tr:nth-child(odd){\n",
+       "            background: #ffffff;\n",
+       "            color: #000000;\n",
+       "        }\n",
+       "        .Table tr:nth-child(even){\n",
+       "            background: #f3f1ff;\n",
+       "            color: #000000;\n",
+       "        }\n",
+       "        /* Tooltip container */\n",
+       "        .djtooltip {\n",
+       "        }\n",
+       "        /* Tooltip text */\n",
+       "        .djtooltip .djtooltiptext {\n",
+       "            visibility: hidden;\n",
+       "            width: 120px;\n",
+       "            background-color: black;\n",
+       "            color: #fff;\n",
+       "            text-align: center;\n",
+       "            padding: 5px 0;\n",
+       "            border-radius: 6px;\n",
+       "            /* Position the tooltip text - see examples below! */\n",
+       "            position: absolute;\n",
+       "            z-index: 1;\n",
+       "        }\n",
+       "        #primary {\n",
+       "            font-weight: bold;\n",
+       "            color: black;\n",
+       "        }\n",
+       "        #nonprimary {\n",
+       "            font-weight: normal;\n",
+       "            color: white;\n",
+       "        }\n",
+       "\n",
+       "        /* Show the tooltip text when you mouse over the tooltip container */\n",
+       "        .djtooltip:hover .djtooltiptext {\n",
+       "            visibility: visible;\n",
+       "        }\n",
+       "    </style>\n",
+       "    \n",
+       "    <b></b>\n",
+       "        <div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+       "        <table border=\"1\" class=\"Table\">\n",
+       "            <thead> <tr style=\"text-align: right;\"> <th> <div class=\"djtooltip\">\n",
+       "                            <p id=\"primary\">applicant_id</p>\n",
+       "                            <span class=\"djtooltiptext\"></span>\n",
+       "                        </div></th><th><div class=\"djtooltip\">\n",
+       "                            <p id=\"primary\">job_id</p>\n",
+       "                            <span class=\"djtooltiptext\"></span>\n",
+       "                        </div></th><th><div class=\"djtooltip\">\n",
+       "                            <p id=\"nonprimary\">current_position</p>\n",
+       "                            <span class=\"djtooltiptext\"></span>\n",
+       "                        </div> </th> </tr> </thead>\n",
+       "            <tbody> <tr>  </tr> </tbody>\n",
+       "        </table>\n",
+       "        \n",
+       "        <p>Total: 0</p></div>\n",
+       "        "
+      ],
+      "text/plain": [
+       "*applicant_id  *job_id    current_positi\n",
+       "+------------+ +--------+ +------------+\n",
+       "\n",
+       " (Total: 0)"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Application()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Application.insert(dict(\n",
+    "    applicant_id=fake.pystr_format(),\n",
+    "    first_name=fake.first_name(),\n",
+    "    last_name=fake.last_name(),\n",
+    "    phone=fake.random_int(1_000_000_0000, 9_999_999_9999),\n",
+    "    email=fake.email()) for _ in range(50))"
+   ]
   }
  ],
  "metadata": {
