--- a/db-course/PythonFinalPro.ipynb
+++ b/db-course/PythonFinalPro.ipynb
@@ -649,15 +649,16 @@
     "Job.insert([\n",
     "    [\"EZ898980\",\"Analyst\",20-09-2023,22-10-2023,\"gathers, cleans, and studies data sets to help solve problems using different skill and tools.\",10000,40000,409503],\n",
     "    [\"EG898323\",\"Data Scientist\",01-04-2023,04-05-2023,\"collects large amounts of data using analytical, statistical, and programmable skills.\",70000,90000,892699],\n",
-    "    [\"ES898423\",\"Database Admin\",30-05-2023,22-07-2023,\"ensure that the databases run efficiently and securely.managing access to systems that store company information.\",100000,10500,892699],\n",
+    "    [\"ES898429\",\"Database Admin\",30-05-2023,22-07-2023,\"ensure that the databases run efficiently and securely.managing access to systems that store company information.\",10000,10500,892699],\n",
     "    [\"EW898323\",\"Programmer\",13-05-2023,12-07-2023,\"designing and updating software solutions, writing and updating source-code and managing various operating systems.\",60000,80060,409503],\n",
-    "    [\"ES3256423\",\"Web Developer\",23-06-2023,22-08-2023,\"develops World Wide Web applications using a client–server model. The applications typically use HTML, CSS, and JavaScript\",700000,905000,546399],\n",
+    "    [\"ES3256422\",\"Web Developer\",23-06-2023,22-08-2023,\"develops World Wide Web applications using a client–server model. The applications typically use HTML, CSS, and JavaScript\",700000,905000,546399],\n",
     "    [\"ED898453\",\"Software Engineer\",10-05-2023,12-07-2023,\"applies the engineering design process to design, develop, test, maintain, and evaluate computer software.\",5000000,6000000,892699],\n",
-    "    [\"EQ4598423\",\"full-stack developer\",03-10-2023,22-11-2023,\"work progressively on both front-end and back-end systems.\",40000,10500,546399],\n",
-    "    [\"EA498423\",\"Database Admin\",30-05-2023,22-07-2023,\"ensure that the databases run efficiently and securely.managing access to systems that store company information.\",100000,10500,777937],\n",
-    "    [\"ES898423\",\"Database Admin\",30-05-2023,22-07-2023,\"ensure that the databases run efficiently and securely.managing access to systems that store company information.\",100000,10500,469720],\n",
-    "    [\"ES898423\",\"Database Admin\",30-05-2023,22-07-2023,\"ensure that the databases run efficiently and securely.managing access to systems that store company information.\",100000,10500,801062],\n",
-    "    [\"ES898423\",\"Database Admin\",30-05-2023,22-07-2023,\"ensure that the databases run efficiently and securely.managing access to systems that store company information.\",100000,10500,514378],\n",
+    "    [\"EQ4598423\",\"full-stack developer\",03-10-2023,22-11-2023,\"work progressively on both front-end and back-end systems.\",40000,50500,546399],\n",
+    "    [\"EA498421\",\"Systems analyst\",10-12-2023,13-01-2024,\"information technology professional who specializes in analyzing, designing and implementing information systems.\",300000,400000,777937],\n",
+    "    [\"EE454499\",\"Computer Systems Analyst\",11-03-2023,10-04-2023,\"regularly perform software audits and work with IT managers to execute improvements. \",90050,100000,469720],\n",
+    "    [\"EZ894412\",\"DevOps Engineer\",14-09-2023,15-10-2023,\"develop, improve, and maintain systems to build, distribute, integrate, and support systems\",80000,80500,801062],\n",
+    "    \n",
+    "    [\"EZ893420\",\"Database Admin\",30-05-2023,22-07-2023,\"ensure that the databases run efficiently and securely.managing access to systems that store company information.\",100000,10500,514378],\n",
     "    [\"ES898423\",\"Database Admin\",30-05-2023,22-07-2023,\"ensure that the databases run efficiently and securely.managing access to systems that store company information.\",100000,10500,546399],\n",
     "    [\"ES898423\",\"Database Admin\",30-05-2023,22-07-2023,\"ensure that the databases run efficiently and securely.managing access to systems that store company information.\",100000,10500,514378],\n",
     "    [\"ES898423\",\"Database Admin\",30-05-2023,22-07-2023,\"ensure that the databases run efficiently and securely.managing access to systems that store company information.\",100000,10500,892699],\n",
