--- a/db-course/PythonFinalPro.ipynb
+++ b/db-course/PythonFinalPro.ipynb
@@ -647,30 +647,30 @@
    "outputs": [],
    "source": [
     "Job.insert([\n",
-    "    [\"EZ898980\",\"Analyst\",20-09-2023,22-10-2023,\"gathers, cleans, and studies data sets to help solve problems using different skill and tools.\",10000,40000,409503],\n",
-    "    [\"EG898323\",\"Data Scientist\",01-04-2023,04-05-2023,\"collects large amounts of data using analytical, statistical, and programmable skills.\",70000,90000,892699],\n",
-    "    [\"ES898429\",\"Database Admin\",30-05-2023,22-07-2023,\"ensure that the databases run efficiently and securely.managing access to systems that store company information.\",10000,10500,892699],\n",
-    "    [\"EW898323\",\"Programmer\",13-05-2023,12-07-2023,\"designing and updating software solutions, writing and updating source-code and managing various operating systems.\",60000,80060,409503],\n",
-    "    [\"ES3256422\",\"Web Developer\",23-06-2023,22-08-2023,\"develops World Wide Web applications using a client–server model. The applications typically use HTML, CSS, and JavaScript\",700000,905000,546399],\n",
-    "    [\"ED898453\",\"Software Engineer\",10-05-2023,12-07-2023,\"applies the engineering design process to design, develop, test, maintain, and evaluate computer software.\",5000000,6000000,892699],\n",
-    "    [\"EQ4598423\",\"full-stack developer\",03-10-2023,22-11-2023,\"work progressively on both front-end and back-end systems.\",40000,50500,546399],\n",
-    "    [\"EA498421\",\"Systems analyst\",10-12-2023,13-01-2024,\"information technology professional who specializes in analyzing, designing and implementing information systems.\",300000,400000,777937],\n",
-    "    [\"EE454499\",\"Computer Systems Analyst\",11-03-2023,10-04-2023,\"regularly perform software audits and work with IT managers to execute improvements. \",90050,100000,469720],\n",
-    "    [\"EZ894412\",\"DevOps Engineer\",14-09-2023,15-10-2023,\"develop, improve, and maintain systems to build, distribute, integrate, and support systems\",80000,80500,801062],\n",
-    "    \n",
-    "    [\"EZ893420\",\"Database Admin\",30-05-2023,22-07-2023,\"ensure that the databases run efficiently and securely.managing access to systems that store company information.\",100000,10500,514378],\n",
-    "    [\"ES898423\",\"Database Admin\",30-05-2023,22-07-2023,\"ensure that the databases run efficiently and securely.managing access to systems that store company information.\",100000,10500,546399],\n",
-    "    [\"ES898423\",\"Database Admin\",30-05-2023,22-07-2023,\"ensure that the databases run efficiently and securely.managing access to systems that store company information.\",100000,10500,514378],\n",
-    "    [\"ES898423\",\"Database Admin\",30-05-2023,22-07-2023,\"ensure that the databases run efficiently and securely.managing access to systems that store company information.\",100000,10500,892699],\n",
-    "    [\"ES898423\",\"Database Admin\",30-05-2023,22-07-2023,\"ensure that the databases run efficiently and securely.managing access to systems that store company information.\",100000,10500,469720],\n",
-    "    [\"ES898423\",\"Database Admin\",30-05-2023,22-07-2023,\"ensure that the databases run efficiently and securely.managing access to systems that store company information.\",100000,10500,892699],\n",
-    "    [\"ES898423\",\"Database Admin\",30-05-2023,22-07-2023,\"ensure that the databases run efficiently and securely.managing access to systems that store company information.\",100000,10500,728468],\n",
-    "    [\"ES898423\",\"Database Admin\",30-05-2023,22-07-2023,\"ensure that the databases run efficiently and securely.managing access to systems that store company information.\",100000,10500,892699],\n",
-    "    [\"ES898423\",\"Database Admin\",30-05-2023,22-07-2023,\"ensure that the databases run efficiently and securely.managing access to systems that store company information.\",100000,10500,546399],\n",
-    "    [\"ES898423\",\"Database Admin\",30-05-2023,22-07-2023,\"ensure that the databases run efficiently and securely.managing access to systems that store company information.\",100000,10500,788478],\n",
-    "    [\"ES898423\",\"Database Admin\",30-05-2023,22-07-2023,\"ensure that the databases run efficiently and securely.managing access to systems that store company information.\",100000,10500,728468],\n",
-    "    [\"ES898423\",\"Database Admin\",30-05-2023,22-07-2023,\"ensure that the databases run efficiently and securely.managing access to systems that store company information.\",100000,10500,788478],\n",
-    "    [\"ES898423\",\"Database Admin\",30-05-2023,22-07-2023,\"ensure that the databases run efficiently and securely.managing access to systems that store company information.\",100000,10500,605221],\n",
+    "    [\"EZ898980\",\"Analyst\",20-9-2023,22-10-2023,\"gathers, cleans, and studies data sets to help solve problems using different skill and tools.\",10000,40000,409503],\n",
+    "    [\"EG898323\",\"Data Scientist\",1-4-2023,4-5-2023,\"collects large amounts of data using analytical, statistical, and programmable skills.\",70000,90000,892699],\n",
+    "    [\"ES898429\",\"Database Admin\",30-5-2023,22-7-2023,\"ensure that the databases run efficiently and securely.managing access to systems that store company information.\",10000,10500,892699],\n",
+    "    [\"EW898323\",\"Programmer\",13-5-2023,12-7-2023,\"designing and updating software solutions, writing and updating source-code and managing various operating systems.\",60000,80060,409503],\n",
+    "    [\"ES3256422\",\"Web Developer\",23-6-2023,22-8-2023,\"develops World Wide Web applications using a client–server model. The applications typically use HTML, CSS, and JavaScript\",700000,905000,546399],\n",
+    "    [\"ED898453\",\"Software Engineer\",10-5-2023,12-7-2023,\"applies the engineering design process to design, develop, test, maintain, and evaluate computer software.\",5000000,6000000,892699],\n",
+    "    [\"EQ4598423\",\"full-stack developer\",3-10-2023,22-11-2023,\"work progressively on both front-end and back-end systems.\",40000,50500,546399],\n",
+    "    [\"EA498421\",\"Systems analyst\",10-12-2023,13-1-2024,\"information technology professional who specializes in analyzing, designing and implementing information systems.\",300000,400000,777937],\n",
+    "    [\"EE454499\",\"Computer Systems Analyst\",11-3-2023,10-4-2023,\"regularly perform software audits and work with IT managers to execute improvements. \",90050,100000,469720],\n",
+    "    [\"EZ894412\",\"DevOps Engineer\",14-9-2023,15-10-2023,\"develop, improve, and maintain systems to build, distribute, integrate, and support systems\",80000,80500,801062],\n",
+    "\n",
+    "    [\"EZ893420\",\"Database Admin\",30-9-2023,22-11-2023,\"ensure that the databases run efficiently and securely.managing access to systems that store company information.\",100000,10500,514378],\n",
+    "    [\"EQ8208419\",\"Database Admin\",1-11-2023,9-12-2023,\"ensure that the databases run efficiently and securely.managing access to systems that store company information.\",100000,10500,546399],\n",
+    "    [\"ED823420\",\"Database Admin\",4-5-2023,12-7-2023,\"ensure that the databases run efficiently and securely.managing access to systems that store company information.\",100000,10500,514378],\n",
+    "    [\"ER843434\",\"Database Admin\",13-10-2023,23-12-2023,\"ensure that the databases run efficiently and securely.managing access to systems that store company information.\",100000,10500,892699],\n",
+    "    [\"ET848424\",\"Database Admin\",17-5-2023,25-6-2023,\"ensure that the databases run efficiently and securely.managing access to systems that store company information.\",100000,10500,469720],\n",
+    "    [\"EF892432\",\"Database Admin\",1-8-2023,1-10-2023,\"ensure that the databases run efficiently and securely.managing access to systems that store company information.\",100000,10500,892699],\n",
+    "    [\"EK898455\",\"Database Admin\",5-6-2023,26-7-2023,\"ensure that the databases run efficiently and securely.managing access to systems that store company information.\",100000,10500,728468],\n",
+    "    [\"EK898246\",\"Database Admin\",31-8-2023,5-10-2023,\"ensure that the databases run efficiently and securely.managing access to systems that store company information.\",100000,10500,892699],\n",
+    "    [\"EG898453\",\"Database Admin\",28-5-2023,15-7-2023,\"ensure that the databases run efficiently and securely.managing access to systems that store company information.\",100000,10500,546399],\n",
+    "    [\"ED896566\",\"Database Admin\",2-2-2023,5-3-2023,\"ensure that the databases run efficiently and securely.managing access to systems that store company information.\",100000,10500,788478],\n",
+    "    [\"EA364365\",\"Database Admin\",30-9-2023,12-12-2023,\"ensure that the databases run efficiently and securely.managing access to systems that store company information.\",100000,10500,728468],\n",
+    "    [\"ET453546\",\"Database Admin\",2-1-2023,12-6-2023,\"ensure that the databases run efficiently and securely.managing access to systems that store company information.\",100000,10500,788478],\n",
+    "    [\"ES436741\",\"Database Admin\",7-9-2023,10-11-2023,\"ensure that the databases run efficiently and securely.managing access to systems that store company information.\",100000,10500,605221],\n",
     "])"
    ]
   },
