--- a/db-course/PythonFinalPro.ipynb
+++ b/db-course/PythonFinalPro.ipynb
@@ -2194,7 +2194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 139,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -2206,7 +2206,7 @@
      "output_type": "stream",
      "text": [
       " * mysql://root:***@127.0.0.1\n",
-      "4 rows affected.\n"
+      "9 rows affected.\n"
      ]
     },
     {
@@ -2215,76 +2215,203 @@
        "<table>\n",
        "    <thead>\n",
        "        <tr>\n",
-       "            <th>job_id</th>\n",
-       "            <th>skill</th>\n",
        "            <th>manager_id</th>\n",
-       "            <th>job_title</th>\n",
-       "            <th>open_date</th>\n",
-       "            <th>description</th>\n",
-       "            <th>minimum_annual_salary</th>\n",
-       "            <th>maximum_annual_salary</th>\n",
+       "            <th>num_jobs_posted</th>\n",
+       "            <th>num_interviews_given</th>\n",
+       "            <th>num_job_offers_issued</th>\n",
+       "            <th>num_accepted_offers</th>\n",
        "        </tr>\n",
        "    </thead>\n",
        "    <tbody>\n",
        "        <tr>\n",
-       "            <td>D6-2084932w</td>\n",
-       "            <td>SQL</td>\n",
+       "            <td>134574</td>\n",
+       "            <td>5</td>\n",
+       "            <td>9</td>\n",
+       "            <td>9</td>\n",
+       "            <td>6</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>300348</td>\n",
+       "            <td>1</td>\n",
+       "            <td>2</td>\n",
+       "            <td>2</td>\n",
+       "            <td>0</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
        "            <td>373145</td>\n",
-       "            <td>Data Engineer</td>\n",
-       "            <td>2024-01-19</td>\n",
-       "            <td>collects large amounts of data using analytical, statistical, and programmable skills.,gather and scrutinise data using specialist tools to generate information that helps others make decisions.</td>\n",
-       "            <td>42000</td>\n",
-       "            <td>106000</td>\n",
+       "            <td>3</td>\n",
+       "            <td>4</td>\n",
+       "            <td>3</td>\n",
+       "            <td>2</td>\n",
        "        </tr>\n",
        "        <tr>\n",
-       "            <td>J5-6425102P</td>\n",
-       "            <td>SQL</td>\n",
-       "            <td>755638</td>\n",
-       "            <td>Database Admin</td>\n",
-       "            <td>2024-01-02</td>\n",
-       "            <td>collects large amounts of data using analytical, statistical, and programmable skills.,gather and scrutinise data using specialist tools to generate information that helps others make decisions.</td>\n",
-       "            <td>77000</td>\n",
-       "            <td>95000</td>\n",
+       "            <td>475441</td>\n",
+       "            <td>1</td>\n",
+       "            <td>2</td>\n",
+       "            <td>2</td>\n",
+       "            <td>2</td>\n",
        "        </tr>\n",
        "        <tr>\n",
-       "            <td>m9-3426306u</td>\n",
-       "            <td>SQL</td>\n",
+       "            <td>503958</td>\n",
+       "            <td>1</td>\n",
+       "            <td>3</td>\n",
+       "            <td>3</td>\n",
+       "            <td>0</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
        "            <td>613054</td>\n",
-       "            <td>Data Scientist II</td>\n",
-       "            <td>2024-01-06</td>\n",
-       "            <td>ensure that the overall system run efficiently and securely</td>\n",
-       "            <td>72000</td>\n",
-       "            <td>106000</td>\n",
+       "            <td>2</td>\n",
+       "            <td>4</td>\n",
+       "            <td>2</td>\n",
+       "            <td>2</td>\n",
        "        </tr>\n",
        "        <tr>\n",
-       "            <td>N2-4213578G</td>\n",
-       "            <td>SQL</td>\n",
-       "            <td>673812</td>\n",
-       "            <td>Data Administrator</td>\n",
-       "            <td>2024-01-28</td>\n",
-       "            <td>create or organize systems to store different data types, such as financial information and customer shipping records.</td>\n",
-       "            <td>36000</td>\n",
-       "            <td>136000</td>\n",
+       "            <td>658433</td>\n",
+       "            <td>1</td>\n",
+       "            <td>2</td>\n",
+       "            <td>2</td>\n",
+       "            <td>2</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>687007</td>\n",
+       "            <td>1</td>\n",
+       "            <td>2</td>\n",
+       "            <td>2</td>\n",
+       "            <td>2</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>755638</td>\n",
+       "            <td>3</td>\n",
+       "            <td>5</td>\n",
+       "            <td>3</td>\n",
+       "            <td>0</td>\n",
        "        </tr>\n",
        "    </tbody>\n",
        "</table>"
       ],
       "text/plain": [
-       "[('D6-2084932w', 'SQL', 373145, 'Data Engineer', datetime.date(2024, 1, 19), 'collects large amounts of data using analytical, statistical, and programmable skills.,gather and scrutinise data using specialist tools to generate information that helps others make decisions.', 42000, 106000),\n",
-       " ('J5-6425102P', 'SQL', 755638, 'Database Admin', datetime.date(2024, 1, 2), 'collects large amounts of data using analytical, statistical, and programmable skills.,gather and scrutinise data using specialist tools to generate information that helps others make decisions.', 77000, 95000),\n",
-       " ('m9-3426306u', 'SQL', 613054, 'Data Scientist II', datetime.date(2024, 1, 6), 'ensure that the overall system run efficiently and securely', 72000, 106000),\n",
-       " ('N2-4213578G', 'SQL', 673812, 'Data Administrator', datetime.date(2024, 1, 28), 'create or organize systems to store different data types, such as financial information and customer shipping records.', 36000, 136000)]"
+       "[(134574, 5, 9, 9, 6),\n",
+       " (300348, 1, 2, 2, 0),\n",
+       " (373145, 3, 4, 3, 2),\n",
+       " (475441, 1, 2, 2, 2),\n",
+       " (503958, 1, 3, 3, 0),\n",
+       " (613054, 2, 4, 2, 2),\n",
+       " (658433, 1, 2, 2, 2),\n",
+       " (687007, 1, 2, 2, 2),\n",
+       " (755638, 3, 5, 3, 0)]"
       ]
      },
-     "execution_count": 374,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%%sql\n",
-    "SELECT * FROM manager natural join job "
+    "SELECT m.manager_id,COUNT(Distinct j.job_id) AS num_jobs_posted,COUNT(i.job_id) AS num_interviews_given,COUNT(o.job_id) AS num_job_offers_issued, COUNT(a.job_id) AS num_accepted_offers\n",
+    "FROM manager m LEFT JOIN job j ON m.manager_id = j.manager_id LEFT JOIN interview i ON j.job_id = i.job_id LEFT JOIN offer o ON i.job_id = o.job_id LEFT JOIN acceptance a ON o.job_id = a.job_id\n",
+    "GROUP BY m.manager_id "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql://root:***@127.0.0.1\n",
+      "6 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <thead>\n",
+       "        <tr>\n",
+       "            <th>applicant_id</th>\n",
+       "            <th>job_id</th>\n",
+       "            <th>manager_id</th>\n",
+       "            <th>interview_date</th>\n",
+       "        </tr>\n",
+       "    </thead>\n",
+       "    <tbody>\n",
+       "        <tr>\n",
+       "            <td>f7-7116752F</td>\n",
+       "            <td>D6-2084932w</td>\n",
+       "            <td>300348</td>\n",
+       "            <td>2024-02-11</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>i7-4926114O</td>\n",
+       "            <td>p0-8425503V</td>\n",
+       "            <td>300348</td>\n",
+       "            <td>2024-02-03</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>q3-1768614C</td>\n",
+       "            <td>f3-2879298o</td>\n",
+       "            <td>300348</td>\n",
+       "            <td>2024-03-03</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>T7-53518N</td>\n",
+       "            <td>I4-1854938J</td>\n",
+       "            <td>300348</td>\n",
+       "            <td>2024-01-17</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>v7-6041900S</td>\n",
+       "            <td>C9-6943858n</td>\n",
+       "            <td>300348</td>\n",
+       "            <td>2024-01-22</td>\n",
+       "        </tr>\n",
+       "        <tr>\n",
+       "            <td>y2-7585416k</td>\n",
+       "            <td>T9-0321901c</td>\n",
+       "            <td>300348</td>\n",
+       "            <td>2024-03-02</td>\n",
+       "        </tr>\n",
+       "    </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('f7-7116752F', 'D6-2084932w', 300348, datetime.date(2024, 2, 11)),\n",
+       " ('i7-4926114O', 'p0-8425503V', 300348, datetime.date(2024, 2, 3)),\n",
+       " ('q3-1768614C', 'f3-2879298o', 300348, datetime.date(2024, 3, 3)),\n",
+       " ('T7-53518N', 'I4-1854938J', 300348, datetime.date(2024, 1, 17)),\n",
+       " ('v7-6041900S', 'C9-6943858n', 300348, datetime.date(2024, 1, 22)),\n",
+       " ('y2-7585416k', 'T9-0321901c', 300348, datetime.date(2024, 3, 2))]"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "SELECT * FROM interview\n",
+    "where manager_id=300348"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
