--- a/db-course/011-Final.ipynb
+++ b/db-course/011-Final.ipynb
@@ -90,20 +90,27 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
     }
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "8. List all job seekers with only 1 skill.\n",
+    "9. List the top 3 job postings with the most skills required.\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.9.17"
   }
  },
  "nbformat": 4,
