--- a/db-course/PythonFinalPro.ipynb
+++ b/db-course/PythonFinalPro.ipynb
@@ -2732,7 +2732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 54,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -2744,42 +2744,14 @@
      "output_type": "stream",
      "text": [
       " * mysql://root:***@127.0.0.1\n",
-      "3 rows affected.\n"
+      "(pymysql.err.ProgrammingError) (1064, \"You have an error in your SQL syntax; check the manual that corresponds to your MySQL server version for the right syntax to use near '_make.datajoint(SELECT job_id, COUNT(*) AS application_count\\nFROM application\\nGR' at line 1\")\n",
+      "[SQL: _make.datajoint(SELECT job_id, COUNT(*) AS application_count\n",
+      "FROM application\n",
+      "GROUP BY job_id\n",
+      "ORDER BY application_count DESC\n",
+      "LIMIT 3)]\n",
+      "(Background on this error at: https://sqlalche.me/e/20/f405)\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "    <thead>\n",
-       "        <tr>\n",
-       "            <th>job_id</th>\n",
-       "            <th>application_count</th>\n",
-       "        </tr>\n",
-       "    </thead>\n",
-       "    <tbody>\n",
-       "        <tr>\n",
-       "            <td>f1-2207807e</td>\n",
-       "            <td>7</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>M1-0138752M</td>\n",
-       "            <td>6</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>J5-6425102P</td>\n",
-       "            <td>5</td>\n",
-       "        </tr>\n",
-       "    </tbody>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "[('f1-2207807e', 7), ('M1-0138752M', 6), ('J5-6425102P', 5)]"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2788,7 +2760,7 @@
     "FROM application\n",
     "GROUP BY job_id\n",
     "ORDER BY application_count DESC\n",
-    "LIMIT 3;"
+    "LIMIT 3"
    ]
   },
   {
@@ -3001,72 +2973,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "sql"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " * mysql://root:***@127.0.0.1\n",
-      "5 rows affected.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "    <thead>\n",
-       "        <tr>\n",
-       "            <th>job_id</th>\n",
-       "            <th>skill</th>\n",
-       "        </tr>\n",
-       "    </thead>\n",
-       "    <tbody>\n",
-       "        <tr>\n",
-       "            <td>X7-9235874U</td>\n",
-       "            <td>C++ Language</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>X7-9235874U</td>\n",
-       "            <td>JAVA</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>X7-9235874U</td>\n",
-       "            <td>Python</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>X7-9235874U</td>\n",
-       "            <td>R Language</td>\n",
-       "        </tr>\n",
-       "        <tr>\n",
-       "            <td>X7-9235874U</td>\n",
-       "            <td>Word</td>\n",
-       "        </tr>\n",
-       "    </tbody>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "[('X7-9235874U', 'C++ Language'),\n",
-       " ('X7-9235874U', 'JAVA'),\n",
-       " ('X7-9235874U', 'Python'),\n",
-       " ('X7-9235874U', 'R Language'),\n",
-       " ('X7-9235874U', 'Word')]"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%%sql\n",
-    "SELECT * FROM job__skill\n",
-    "where job_id='X7-9235874U'\t"
+    "%%sql\n"
    ]
   }
  ],
